// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CommentInput 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransitionStart={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "rgba(255, 255, 255, 255)",
                          "flexDirection": "row",
                          "paddingBottom": 8,
                          "paddingHorizontal": 16,
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#F5F5F5",
                            "borderBottomLeftRadius": 22.5,
                            "borderBottomRightRadius": 22.5,
                            "borderColor": "rgba(229, 229, 234, 255)",
                            "borderRadius": 15,
                            "borderTopLeftRadius": 22.5,
                            "borderTopRightRadius": 22.5,
                            "borderWidth": 0.5,
                            "elevation": 1,
                            "height": 0,
                            "minHeight": 45,
                            "overflow": "hidden",
                            "paddingRight": 8,
                            "shadowColor": "rgba(0, 0, 0, 255)",
                            "shadowOffset": Object {
                              "x": 0,
                              "y": 0,
                            },
                            "shadowOpacity": 0.18,
                            "shadowRadius": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flex": 1,
                                "flexDirection": "row",
                                "paddingLeft": 16,
                              },
                              undefined,
                            ]
                          }
                        >
                          <TextInput
                            allowFontScaling={true}
                            blurOnSubmit={false}
                            disableAutofocus={true}
                            editable={true}
                            maxLength={1024}
                            onBlur={[Function]}
                            onChangeText={[Function]}
                            onContentSizeChange={[Function]}
                            onFocus={[Function]}
                            placeholder="Add a comment..."
                            placeholderTextColor="rgba(174, 174, 178, 255)"
                            rejectResponderTermination={true}
                            returnKeyType="default"
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "transparent",
                                  "color": "rgba(0,0,0,0.87)",
                                  "flex": 1,
                                  "fontFamily": "System",
                                  "fontSize": 16,
                                  "fontWeight": "400",
                                  "height": "100%",
                                  "letterSpacing": -0.32,
                                  "lineHeight": 21,
                                },
                                Object {
                                  "minHeight": 45,
                                },
                                undefined,
                              ]
                            }
                            underlineColorAndroid="transparent"
                            value=""
                          />
                        </View>
                      </View>
                    </View>
                    <View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                      >
                        <View
                          accessible={true}
                          focusable={false}
                          hitSlop={
                            Object {
                              "bottom": 0,
                              "left": 0,
                              "right": 0,
                              "top": 0,
                            }
                          }
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "rgba(0, 122, 255, 255)",
                              "borderRadius": 1000,
                              "elevation": 2,
                              "height": 45,
                              "justifyContent": "center",
                              "marginLeft": 8,
                              "maxHeight": 45,
                              "maxWidth": 45,
                              "opacity": 1,
                              "shadowColor": "rgba(0, 0, 0, 255)",
                              "shadowOffset": Object {
                                "x": 0,
                                "y": 1,
                              },
                              "shadowOpacity": 0.2,
                              "shadowRadius": 1.41,
                              "transform": Array [
                                Object {
                                  "scale": 1,
                                },
                              ],
                              "width": 45,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              Object {
                                "color": "rgba(255, 255, 255, 255)",
                                "fontFamily": "icomoon",
                                "fontSize": 22.52252252252252,
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              }
                            }
                            text="kebeticon-microphone"
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  pointerEvents="box-none"
                >
                  <View
                    accessibilityElementsHidden={false}
                    importantForAccessibility="auto"
                    onLayout={[Function]}
                    pointerEvents="box-none"
                    style={null}
                  >
                    <View
                      pointerEvents="box-none"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "zIndex": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "rgb(255, 255, 255)",
                            "borderBottomColor": "rgb(216, 216, 216)",
                            "flex": 1,
                            "shadowColor": "rgb(216, 216, 216)",
                            "shadowOffset": Object {
                              "height": 0.5,
                              "width": 0,
                            },
                            "shadowOpacity": 0.85,
                            "shadowRadius": 0,
                          }
                        }
                      />
                    </View>
                    <View
                      pointerEvents="box-none"
                      style={
                        Object {
                          "height": 56,
                          "maxHeight": undefined,
                          "minHeight": undefined,
                          "opacity": undefined,
                          "transform": undefined,
                        }
                      }
                    >
                      <View
                        pointerEvents="none"
                        style={
                          Object {
                            "height": 0,
                          }
                        }
                      />
                      <View
                        pointerEvents="box-none"
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          pointerEvents="box-none"
                          style={
                            Object {
                              "marginHorizontal": 16,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="header"
                            numberOfLines={1}
                            onLayout={[Function]}
                            style={
                              Object {
                                "color": "rgb(28, 28, 30)",
                                "fontSize": 17,
                                "fontWeight": "600",
                              }
                            }
                          >
                            jest
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders CommentInput with AudioPlayer 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "opacity": 1,
          }
        }
      />
      <View
        accessibilityElementsHidden={false}
        closing={false}
        gestureVelocityImpact={0.3}
        importantForAccessibility="auto"
        onClose={[Function]}
        onGestureBegin={[Function]}
        onGestureCanceled={[Function]}
        onGestureEnd={[Function]}
        onOpen={[Function]}
        onTransitionStart={[Function]}
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        transitionSpec={
          Object {
            "close": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
            "open": Object {
              "animation": "spring",
              "config": Object {
                "damping": 500,
                "mass": 3,
                "overshootClamping": true,
                "restDisplacementThreshold": 10,
                "restSpeedThreshold": 10,
                "stiffness": 1000,
              },
            },
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            collapsable={false}
            forwardedRef={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            style={
              Object {
                "flex": 1,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "backgroundColor": "rgb(242, 242, 242)",
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 1,
                    "width": -1,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 5,
                  "top": 0,
                  "width": 3,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "flex": 1,
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column-reverse",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "rgba(255, 255, 255, 255)",
                          "flexDirection": "row",
                          "paddingBottom": 8,
                          "paddingHorizontal": 16,
                          "width": "100%",
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                            "marginRight": 4,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flex": 1,
                                "height": 52,
                                "maxHeight": 52,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "#F5F5F5",
                                  "borderRadius": 5,
                                  "flex": 1,
                                  "overflow": "hidden",
                                },
                                Object {
                                  "backgroundColor": "#F5F5F5",
                                  "borderColor": "rgba(229, 229, 234, 255)",
                                  "borderWidth": 0.5,
                                  "elevation": 1,
                                  "shadowColor": "rgba(0, 0, 0, 255)",
                                  "shadowOffset": Object {
                                    "x": 0,
                                    "y": 0,
                                  },
                                  "shadowOpacity": 0.18,
                                  "shadowRadius": 1,
                                },
                                Object {
                                  "borderRadius": 20,
                                },
                              ]
                            }
                            testID="player-wrapper"
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "rgba(199, 199, 204, 255)",
                                    "borderBottomLeftRadius": 5,
                                    "borderTopLeftRadius": 5,
                                    "height": "100%",
                                    "opacity": 0.4,
                                    "position": "absolute",
                                    "width": "0%",
                                  }
                                }
                                testID="progress"
                              />
                              <View
                                accessible={true}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 10,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#F5F5F5",
                                    "borderRadius": 1000,
                                    "elevation": 2,
                                    "height": 30,
                                    "justifyContent": "center",
                                    "marginLeft": 16,
                                    "opacity": 1,
                                    "shadowColor": "rgba(0, 0, 0, 255)",
                                    "shadowOffset": Object {
                                      "x": 0,
                                      "y": 1,
                                    },
                                    "shadowOpacity": 0.2,
                                    "shadowRadius": 1.41,
                                    "width": 30,
                                  }
                                }
                              >
                                <Text
                                  allowFontScaling={false}
                                  style={
                                    Object {
                                      "color": "#0B1B77",
                                      "fontFamily": "Ionicons",
                                      "fontSize": 22,
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                      "marginLeft": 3,
                                    }
                                  }
                                  text="ionicon-ios-play"
                                />
                              </View>
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "flex": 1,
                                  }
                                }
                              >
                                <Image
                                  source={
                                    Object {
                                      "testUri": "../../../assets/images/waves.png",
                                    }
                                  }
                                  style={
                                    Object {
                                      "resizeMode": "contain",
                                      "width": "80%",
                                    }
                                  }
                                />
                              </View>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "color": "#000000",
                                      "fontFamily": "System",
                                      "fontSize": 12,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 16,
                                    },
                                    Array [
                                      Object {
                                        "color": "rgba(0,0,0,0.54)",
                                      },
                                      undefined,
                                      Array [
                                        Object {
                                          "bottom": 2,
                                          "position": "absolute",
                                          "right": 8,
                                        },
                                        undefined,
                                      ],
                                    ],
                                  ]
                                }
                              >
                                0:00
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "rgba(0, 122, 255, 255)",
                          "borderRadius": 1000,
                          "elevation": 2,
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 8,
                          "maxHeight": 45,
                          "maxWidth": 45,
                          "opacity": 1,
                          "shadowColor": "rgba(0, 0, 0, 255)",
                          "shadowOffset": Object {
                            "x": 0,
                            "y": 1,
                          },
                          "shadowOpacity": 0.2,
                          "shadowRadius": 1.41,
                          "width": 45,
                        }
                      }
                      testID="send-button"
                    >
                      <Text
                        allowFontScaling={false}
                        style={
                          Object {
                            "color": "rgba(255, 255, 255, 255)",
                            "fontFamily": "Ionicons",
                            "fontSize": 25,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                            "marginLeft": 5,
                          }
                        }
                        text="ionicon-md-send"
                      />
                    </View>
                  </View>
                </View>
                <View
                  pointerEvents="box-none"
                >
                  <View
                    accessibilityElementsHidden={false}
                    importantForAccessibility="auto"
                    onLayout={[Function]}
                    pointerEvents="box-none"
                    style={null}
                  >
                    <View
                      pointerEvents="box-none"
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "zIndex": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "rgb(255, 255, 255)",
                            "borderBottomColor": "rgb(216, 216, 216)",
                            "flex": 1,
                            "shadowColor": "rgb(216, 216, 216)",
                            "shadowOffset": Object {
                              "height": 0.5,
                              "width": 0,
                            },
                            "shadowOpacity": 0.85,
                            "shadowRadius": 0,
                          }
                        }
                      />
                    </View>
                    <View
                      pointerEvents="box-none"
                      style={
                        Object {
                          "height": 56,
                          "maxHeight": undefined,
                          "minHeight": undefined,
                          "opacity": undefined,
                          "transform": undefined,
                        }
                      }
                    >
                      <View
                        pointerEvents="none"
                        style={
                          Object {
                            "height": 0,
                          }
                        }
                      />
                      <View
                        pointerEvents="box-none"
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          pointerEvents="box-none"
                          style={
                            Object {
                              "marginHorizontal": 16,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="header"
                            numberOfLines={1}
                            onLayout={[Function]}
                            style={
                              Object {
                                "color": "rgb(28, 28, 30)",
                                "fontSize": 17,
                                "fontWeight": "600",
                              }
                            }
                          >
                            jest
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
